{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 703,
  "lineage": "60da6aea-e207-9372-33c2-42983d07f309",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "app_namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "betterme-test",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "environment": "dev",
                  "name": "betterme-test"
                },
                "name": "betterme-test",
                "resource_version": "1875",
                "uid": "d8fd0ec6-614c-4667-8864-482747c9356e"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "betterme-test"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks.aws_cloudwatch_log_group.eks_cluster_log_group",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.security.aws_iam_role.eks_node_role",
            "module.security.aws_iam_role.eks_service_role",
            "module.security.data.aws_iam_policy_document.eks_assume_role_policy",
            "module.security.data.aws_iam_policy_document.node_assume_role_policy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:security-group/sg-0926025134909129d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0926025134909129d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL access from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-005d4726fef9fbc64"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "betterme-test-dev-database2025082011175299170000000c",
            "name_prefix": "betterme-test-dev-database",
            "owner_id": "647582859245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Module": "security",
              "Name": "betterme-test-dev-database-sg",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Module": "security",
              "Name": "betterme-test-dev-database-sg",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7c9dff683221d37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.eks_cluster",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:security-group/sg-005d4726fef9fbc64",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005d4726fef9fbc64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "betterme-test-dev-eks-cluster20250820111748423800000009",
            "name_prefix": "betterme-test-dev-eks-cluster",
            "owner_id": "647582859245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Module": "security",
              "Name": "betterme-test-dev-eks-cluster-sg",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Module": "security",
              "Name": "betterme-test-dev-eks-cluster-sg",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7c9dff683221d37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:internet-gateway/igw-053bb4b8410e78957",
            "id": "igw-053bb4b8410e78957",
            "owner_id": "647582859245",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-igw",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-igw",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test"
            },
            "vpc_id": "vpc-0a7c9dff683221d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:route-table/rtb-047b325a4cfcf6041",
            "id": "rtb-047b325a4cfcf6041",
            "owner_id": "647582859245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-database-rt",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-database-rt",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7c9dff683221d37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:route-table/rtb-0cb3ee5bd4771b0ec",
            "id": "rtb-0cb3ee5bd4771b0ec",
            "owner_id": "647582859245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053bb4b8410e78957",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-public-rt",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-public-rt",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7c9dff683221d37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010174aa9d38db42c",
            "route_table_id": "rtb-047b325a4cfcf6041",
            "subnet_id": "subnet-0e2393272532a6caf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e5969cad457826b",
            "route_table_id": "rtb-047b325a4cfcf6041",
            "subnet_id": "subnet-02764b2d3a3ca48d8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020a630f0072c514d",
            "route_table_id": "rtb-0cb3ee5bd4771b0ec",
            "subnet_id": "subnet-0f65241b000788b04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0553083cdafecf9c8",
            "route_table_id": "rtb-0cb3ee5bd4771b0ec",
            "subnet_id": "subnet-05691c375e9d8ad38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:subnet/subnet-0e2393272532a6caf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2393272532a6caf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "647582859245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-database-1",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-database-1",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Database"
            },
            "vpc_id": "vpc-0a7c9dff683221d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:subnet/subnet-02764b2d3a3ca48d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02764b2d3a3ca48d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "647582859245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-database-2",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-database-2",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Database"
            },
            "vpc_id": "vpc-0a7c9dff683221d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:subnet/subnet-08155fb3f8bde1939",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08155fb3f8bde1939",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "647582859245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-private-1",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Private",
              "kubernetes.io/cluster/betterme-test-dev-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-private-1",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Private",
              "kubernetes.io/cluster/betterme-test-dev-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a7c9dff683221d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:subnet/subnet-00644610e1d97afb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00644610e1d97afb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "647582859245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-private-2",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Private",
              "kubernetes.io/cluster/betterme-test-dev-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-private-2",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Private",
              "kubernetes.io/cluster/betterme-test-dev-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a7c9dff683221d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:subnet/subnet-0f65241b000788b04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f65241b000788b04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "647582859245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-public-1",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Public",
              "kubernetes.io/cluster/betterme-test-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-public-1",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Public",
              "kubernetes.io/cluster/betterme-test-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a7c9dff683221d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:subnet/subnet-05691c375e9d8ad38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05691c375e9d8ad38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "647582859245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-public-2",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Public",
              "kubernetes.io/cluster/betterme-test-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-public-2",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "Type": "Public",
              "kubernetes.io/cluster/betterme-test-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a7c9dff683221d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:vpc/vpc-0a7c9dff683221d37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0912e6867900115e7",
            "default_route_table_id": "rtb-0c7eb56c6bba33fd1",
            "default_security_group_id": "sg-0e8d36a7a0407b205",
            "dhcp_options_id": "dopt-0f6887b9832e981a4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7c9dff683221d37",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7eb56c6bba33fd1",
            "owner_id": "647582859245",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "betterme-test-dev-vpc",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "kubernetes.io/cluster/betterme-test-dev-eks-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "betterme-test-dev-vpc",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test",
              "kubernetes.io/cluster/betterme-test-dev-eks-cluster": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:647582859245:vpc-endpoint/vpce-0167f8ae7ba70a90f",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0167f8ae7ba70a90f",
            "owner_id": "647582859245",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-047b325a4cfcf6041",
              "rtb-0cb3ee5bd4771b0ec"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "service_region": "us-west-2",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-s3-endpoint",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "betterme-test-dev-s3-endpoint",
              "Owner": "betterme-devops-test",
              "Project": "betterme-test"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a7c9dff683221d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}